# Snake

./: CMakeLists.txt  README.md  ranking.txt
include/: assetManager.h  button.h  endState.h  food.h  game.h  map.h  menuState.h  nameState.h  playState.h  rankingState.h  snake.h  state.h  textbox.h
src/: assetManager.cpp  button.cpp  endState.cpp  food.cpp  game.cpp  main.cpp  map.cpp  menuState.cpp  nameState.cpp  playState.cpp  rankingState.cpp  snake.cpp  textbox.cpp
